@@ -1,3 +1,9 @@
+2004-04-05 00:06 Gregory John Casamento <greg_casamento@yahoo.com>
+
+	* GormDocument.m: [GormDocument rebuildObjToNameMapping] some 
+	additional debugging information.  Also in [GormDocument loadDocument:]
+	unarchiver is now explicitly using RELEASE instead of AUTORELEASE.
+
 2004-04-04 22:09 Gregory John Casamento <greg_casamento@yahoo.com>
 
 	* GormDocument.m: [GormDocument rebuildObjToNameMapping]
